--- a/AstonMartin/MainWindow.xaml
+++ b/AstonMartin/MainWindow.xaml
@@ -1,7 +1,10 @@
 ﻿<Window x:Class="AstonMartin.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow" Height="798" Width="1465" Loaded="Window_Loaded">
+        Title="MainWindow" Height="798" Width="1465" Loaded="Window_Loaded"
+        WindowStyle="None" ResizeMode="NoResize"  
+    WindowStartupLocation="CenterScreen" WindowState="Maximized">
+    
     <Grid Background="Black">
         <TextBlock HorizontalAlignment="Center" Foreground="White" VerticalAlignment="Center" x:Name="tb" Text="Ielādējos..." FontSize="72"/>
     </Grid>
